# pywalrchy

./: .gitignore  README.md  pyproject.toml
pywalrchy/: __main__.py  app.py  config.py  hyprpaper.py  omarchy.py  pywal.py  theme.py
