[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pywalrchy"
version = "0.1.0"
description = "Wallpaper-driven theme manager for Omarchy"
requires-python = ">=3.11"
dependencies = ["textual>=0.80"]

[project.scripts]
pywalrchy = "pywalrchy.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pywalrchy*"]
